# fingertrees

./: README.md  generic-finger-trees.cabal
bench/: intervaltrees.hs  sequence.hs
src/Data/: FingerTree.hs  Interval.hs
src/Data/FingerTree/: Generate.hs  IntervalMap.hs  IntervalTree.hs  OrderedSequence.hs  PriorityQueue.hs  Sequence.hs
test/: doctest.hs
