name:                generic-finger-trees
version:             0.1.0.0
synopsis:            Reimplementation of Hinze's finger trees
-- description:
license:             BSD3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           2014 Matthew Peddie
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.FingerTree
                     , Data.FingerTree.Sequence
                     , Data.FingerTree.PriorityQueue
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
