name:                generic-finger-trees
version:             0.1.0.0
synopsis:            Reimplementation of Hinze's finger trees
-- description:
license:             BSD3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           2014 Matthew Peddie
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.FingerTree
                     , Data.FingerTree.Sequence
                     , Data.FingerTree.PriorityQueue
                     , Data.FingerTree.OrderedSequence
                     , Data.FingerTree.IntervalTree
  build-depends:       base >=4.7 && <4.8
                     , QuickCheck >= 2.7
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctest.hs
  Build-Depends:        base
                      , doctest >= 0.9.11

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:
  Build-Depends:        base
                      , hspec >= 2.1
                      , QuickCheck >= 2.7
                      , generic-finger-trees
